Remove Java 17 preview features They somehow do not let higher JDK versions to be used